Fixed problem with nested sortables

--- a/angular-sortable.css
+++ b/angular-sortable.css
@@ -1,37 +1,37 @@
 [ng-sortable] {
     position: relative !important;
 }
-[ng-sortable].sortable-sorting {
+[ng-sortable][class*=sortable-sorting] {
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
 }
-[ng-sortable] .sortable-item {
+[ng-sortable] [class*=sortable-item] {
 }
 
-[ng-sortable] .sortable-state {
+[ng-sortable] [class*=sortable-state] {
     display: none;
 }
-[ng-sortable] .sortable-clone {
+[ng-sortable] [class*=sortable-clone] {
     display: block !important;
     position: absolute !important;
 }
-[ng-sortable] .sortable-clone .sortable-initial {
+[ng-sortable] [class*=sortable-clone] [class*=sortable-initial] {
     display: none;
 }
-[ng-sortable] .sortable-clone .sortable-state {
+[ng-sortable] [class*=sortable-clone] [class*=sortable-state] {
     display: block;
 }
 
-[ng-sortable] .sortable-item.sortable-activeitem {
+[ng-sortable] [class*=sortable-item][class*=sortable-activeitem] {
     opacity: 0.5;
     display: block;
 }
 
-[ng-sortable].sortable-both .sortable-item {
+[ng-sortable][class*=sortable-both] [class*=sortable-item] {
     display: inline-block;
 }
-[ng-sortable].sortable-horizontal .sortable-item {
+[ng-sortable][class*=sortable-horizontal] [class*=sortable-item] {
     display: inline-block;
     white-space: nowrap;
 }
